style: fix toolbar spacing on smaller screen

--- a/studio/src/app/components/editor/actions/footer/app-actions-editor/app-actions-editor.scss
+++ b/studio/src/app/components/editor/actions/footer/app-actions-editor/app-actions-editor.scss
@@ -84,6 +84,9 @@ app-actions-editor {
         justify-content: center;
         flex-direction: row;
 
+        width: fit-content;
+        margin: auto;
+
         ion-buttons {
           flex-direction: row;
 
